--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 }
 
-#listaDeCompras {
+#container {
     border: 1px solid black;
     width: 300px;
     height: 600px;
@@ -17,9 +17,9 @@ body {
 width: 220px;
 }
 
-#item {
-    height: 15px;
-    width: 15px;
+.item {
+    height: 17px;
+    width: 17px;
 }
 
 ul, li{
