--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 body {
     margin: 0;
-    padding: 0;
-    background-color: rgba(120, 120, 120, 0.1);
+    background-color:darkslategray;
 
 }
 
 #container {
     border: 1px solid black;
     width: 300px;
-    height: 600px;
-    margin: 10px;
+    height: 680px;
+    margin: auto;
     padding: 10px;
+    margin-top: 20px;
+    background-color: rgba(120, 120, 120, 0.3);
 }
 
 #inputListaDeCompra {
